--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow\\\\research'"
+       "'/Users/satyam/Desktop/END-to-END-Machine-Learning-Project-with-ML-Flow/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow'"
+       "'/Users/satyam/Desktop/END-to-END-Machine-Learning-Project-with-ML-Flow'"
       ]
      },
      "execution_count": 4,
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "(1599, 12)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mlProject.constants import *\n",
-    "from mlProject.utils.common import read_yaml, create_directories"
+    "from MLProject.constants import *\n",
+    "from MLProject.utils.common import read_yaml, create_directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,12 +402,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from mlProject import logger"
+    "from MLProject import logger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,18 +445,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 10:19:18,638: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 10:19:18,640: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 10:19:18,644: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 10:19:18,646: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 10:19:18,647: INFO: common: created directory at: artifacts/data_validation]\n"
+      "[2025-01-04 03:11:15,058: {INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-01-04 03:11:15,059: {INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-04 03:11:15,061: {INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-01-04 03:11:15,062: {INFO: common: created directory at: artifacts]\n",
+      "[2025-01-04 03:11:15,063: {INFO: common: created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
@@ -480,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlproj",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
