--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow\\\\research'"
+       "'/Users/satyam/Desktop/END-to-END-Machine-Learning-Project-with-ML-Flow/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-end-Machine-Learning-Project-with-MLflow'"
+       "'/Users/satyam/Desktop/END-to-END-Machine-Learning-Project-with-ML-Flow'"
       ]
      },
      "execution_count": 4,
@@ -85,8 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mlProject.constants import *\n",
-    "from mlProject.utils.common import read_yaml, create_directories"
+    "from MLProject.constants import *\n",
+    "from MLProject.utils.common import read_yaml, create_directories"
    ]
   },
   {
@@ -134,13 +134,21 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-01-04 04:57:19,532: {INFO: utils: NumExpr defaulting to 8 threads.]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "from mlProject import logger\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "import joblib"
+    "import joblib\n",
+    "from MLProject import logger\n",
+    "from sklearn.linear_model import ElasticNet\n"
    ]
   },
   {
@@ -181,11 +189,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-11 20:13:53,258: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,265: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,268: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-07-11 20:13:53,269: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-11 20:13:53,270: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2025-01-04 04:57:39,463: {INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-01-04 04:57:39,465: {INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-04 04:57:39,467: {INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-01-04 04:57:39,469: {INFO: common: created directory at: artifacts]\n",
+      "[2025-01-04 04:57:39,470: {INFO: common: created directory at: artifacts/model_trainer]\n"
      ]
     }
    ],
@@ -209,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlproj",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
